<resources>
    <string name="app_name">Tawsili</string>
    <string name="action_settings">Settings</string>
    <string name="call_driver">Call Driver</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="lorem_ipsum_dolor">Lorem ipsum Dolor Sign \nText is gonna here</string>
    <string name="title_activity_login">Login</string>
    <string name="or">OR</string>
    <string name="title_activity_sign_up" translatable="false">SignUpActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="login_using_facebook">Login using facebook</string>
    <string name="full_name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="promo_code_optional">Promo Code (Optional)</string>
    <string name="i_agree_to_terms_and_conditions">I agree to terms and conditions</string>
    <string name="title_activity_ask_for_email" translatable="false">AskForEmailActivity</string>
    <string name="title_activity_ask_for_verification_code" translatable="false">AskForVerificationCodeActivity</string>
    <string name="sign_up_using_facebook">Sign up using facebook</string>
    <string name="verification_code">Verification Code</string>
    <string name="submit">Submit</string>
    <string name="title_activity_pick_location">Pickup Location</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="business">Business</string>
    <string name="economy">Economy</string>
    <string name="vip">VIP</string>
    <string name="family">Family</string>
    <string name="max_no_of_bags">Max No. of bags:</string>
    <string name="max_no_of_persons">Max No. of Persons:</string>
    <string name="book_a_ride">Book A Ride</string>
    <string name="my_rides_history">My Rides History</string>
    <string name="my_scheduled_rides">My Scheduled Rides</string>
    <string name="payment">Payment</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="call_us">Call Us</string>
    <string name="more_options">More Options</string>
    <string name="english_speaking_drivers_only">English Speaking Drivers Only!</string>
    <string name="title_activity_my_rides" translatable="false">MyRidesActivity</string>
    <string name="title_activity_invite_friend" translatable="false">InviteFriendActivity</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="my_rides">My Rides</string>
    <string name="sign_out">Sign out</string>
    <string name="name">Name:</string>
    <string name="mobile_with_colon">Mobile:</string>
    <string name="email2">Email:</string>
    <string name="change_password">Change Password</string>
    <string name="rates">Rates</string>
    <string name="language">Language</string>
    <string name="feedback">Feedback</string>
    <string name="language_arabic">Arabic</string>
    <string name="language_en">English</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google+</string>
    <string name="sms">SMS</string>
    <string name="email1">Email</string>
    <string name="your_personal_invite_link">Your personal invite link</string>
    <string name="location_is_gonna_be_here">Location is gonna be here</string>
    <string name="ride_now">Ride now</string>
    <string name="ride_later">Ride later</string>
    <string name="title_activity_book_abusiness_car" translatable="false">BookABusinessCarActivity</string>
    <string name="book_a_business_car">Book A Car</string>
    <string name="current_location_is_gonna_be_here">Current location is gonna be here</string>
    <string name="drop_off_location_is_gonna_be_here">Drop off location is gonna be here</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="cash">Cash</string>
    <string name="fair_estimate">Add a dropoff</string>
    <string name="penalty">Penalty</string>
    <string name="select_time">Select Time</string>
    <string name="title_activity_your_ride" translatable="false">YourRideActivity</string>
    <string name="your_ride">Your Ride</string>
    <string name="title_activity_favorite_places" translatable="false">FavoritePlacesActivity</string>
    <string name="title_activity_select_time" translatable="false">SelectTimeActivity</string>
    <string name="favorite_places">Favorite Places</string>
    <string name="search">Search...</string>
    <string name="title_activity_search_results" translatable="false">SearchResultsActivity</string>
    <string name="save">Save</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="check_network_connection">check network connection</string>
    <string name="error">Error</string>
    <string name="loading">Loading...</string>
    <string name="enter_name">Enter Name</string>
    <string name="phone_not_valid">invalid phone number</string>
    <string name="email_not_valid">email not valid</string>
    <string name="password_not_valid">enter 6 digits password</string>
    <string name="terms_and_conditions_not_valid">must confirm terms and conditions</string>
    <string name="resend_code_after">Resend code after..</string>
    <string name="resend">Resend</string>
    <string name="email_invalide">email not valid</string>
    <string name="enter_your_mail">Enter valid mail</string>
    <string name="invalid_code">invalid code!</string>
    <string-array name="options_array">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="complete_your_data">Complete your data</string>
    <string name="open_gps">Open GPS!</string>
    <string name="why_open_gps">Should open GPS to detect your location</string>
    <string name="yes_open_gps">Yes, Active</string>
    <string name="regular">Regular</string>
    <string name="special">Special</string>
    <string name="category">Category</string>
    <string name="title_activity_confirm_pick_location" translatable="false">ConfirmPickLocationActivity</string>
    <string name="confirm_pickup">Confirm PickUp</string>
    <string name="iwill_guid">I will guid the captain</string>
    <string name="select_location_from_map">Select location from map</string>
    <string name="to_get_fare_estimate">to get fare estimate</string>
    <string name="title_activity_ask_for_promo_code" translatable="false">AskForPromoCodeActivity</string>
    <string name="promo_code">Promo Code</string>
    <string name="add_code">Add Promo!</string>
    <string name="valide_promo">Valide Code</string>
    <string name="invalide_promo">Invalide Code</string>
    <string name="try_agin">Try agin!</string>
    <string name="yes_try_again">Yes, try again</string>
    <string name="title_activity_your_ride_two" translatable="false">YourRideTwoActivity</string>
    <string name="title_activity_your_ride_third" translatable="false">YourRideThirdActivity</string>
    <string name="cancel">Cancel</string>
    <string name="pay_penalty">You will pay penalty if order Canceled</string>
    <string name="driver">Driver:</string>
    <string name="car">Car:</string>
    <string name="rate">Rate:</string>
    <string name="license_plate">License plate:</string>
    <string name="ok">Ok</string>
    <string name="driver_arrived">Driver Arrived</string>
    <string name="pickup">Pickup</string>
    <string name="driver_rating">Driver Rating</string>
    <string name="paid_with">Paid with</string>
    <string name="total_fare">Total fare</string>
    <string name="discount">Discount</string>
    <string name="paid_from_balance">Paid From Balance</string>
    <string name="trip_fair">Trip fair</string>
    <string name="distance">Distance</string>
    <string name="drop_off">Drop Off</string>
    <string name="rate_driver">Rate Driver</string>
    <string name="ratee">Rate</string>
    <string name="done">Done!</string>
    <string name="you_have_new_trip">You have scheduling order</string>
    <string name="title_activity_schedule_tesult" translatable="false">ScheduleTesultActivity</string>
    <string name="tawsili_alarm">Tawsili Alarm</string>
    <string name="title_activity_my_schedule_orders" translatable="false">MyScheduleOrdersActivity</string>
    <string name="title_activity_rate" translatable="false">RateActivity</string>
    <string name="title_activity_rate_categoriy" translatable="false">RateCategoriyActivity</string>
    <string name="regular_family">Regular Family</string>
    <string name="special_family">Special Family</string>
    <string name="starting">Starting :</string>
    <string name="moving">Moving :</string>
    <string name="waiting">Waiting :</string>
    <string name="minimum">Minimum :</string>
    <string name="airport_pickup">Airport Pickup :</string>
    <string name="now">Now</string>
    <string name="later">Later</string>
    <string name="title_activity_change_password" translatable="false">ChangePasswordActivity</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm new password</string>
    <string name="password_not_equal">Password not equal confirmation password</string>
    <string name="need_at">Need at least 6 digit</string>
    <string name="complaint">Complaint</string>
    <string name="suggestion">Suggestion</string>
    <string name="other">Other</string>
</resources>
