<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/book_a_ride"
            android:icon="@drawable/car"
            android:title="@string/book_a_ride" />
        <item
            android:id="@+id/my_rides_history"
            android:icon="@drawable/clock"
            android:title="@string/my_rides_history" />
        <item
            android:id="@+id/my_scheduled_rides"
            android:icon="@drawable/callender"
            android:title="@string/my_scheduled_rides" />
        <item
            android:id="@+id/payment"
            android:icon="@drawable/payment"
            android:title="@string/payment" />
        <item
            android:id="@+id/invite_friends"
            android:icon="@drawable/invite"
            android:title="@string/invite_friends" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/call_us"
            android:icon="@drawable/contact"
            android:title="@string/call_us" />

    </group>

    <item android:title="@string/more_options">
        <menu>
            <item
                android:id="@+id/english_speaking"
                android:title="@string/english_speaking_drivers_only" />
        </menu>
    </item>

</menu>
