<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_select_time"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#d1d4f5"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.perfect_apps.tawsili.activities.SelectTimeActivity"
    tools:showIn="@layout/app_bar_select_time">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/border_shape_button"
            android:id="@+id/pick_date" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_time"
            android:textColor="@color/white"
            android:background="@drawable/border_shape_button"
            android:id="@+id/pick_time"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <Spinner
            android:id="@+id/choose_iteration"
            android:layout_width="match_parent"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border_shape_button_dark"
        android:text="@string/save"
        android:textColor="@color/white" />

</RelativeLayout>
